# currrency_rate

./: .gitignore  README.md  pyproject.toml
main/: currency_rates.json  main.py
src/: funcs.py
